--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Jess Dever's Profile</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Jess!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:jessicadever1@gmail.com">email</a></li>
-        		<li><a href="https://github.com/jessicadever1">github.com/jessicadever1</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+	<!DOCTYPE html>
+	<html>
+		<head>
+			<title>Jessica Dever's Profile</title>
+			<link rel="stylesheet" type="text/css" href="/css/main.css">
+		</head>
+		<body>
+			<nav>
+				<ul>
+					<li><a href="/">Home</a></li>
+					<li><a href="/about">About</a></li>
+					<li><a href="/cv">Resume</a></li>
+				</ul>
+			</nav>
+			<div class="container">
+				<div class="blurb">
+					<h1>Hi there, I'm Jess!</h1>
+					<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				</div><!-- /.blurb -->
+			</div><!-- /.container -->
+			<footer>
+				<ul>
+					<li><a href="mailto:jessicadever1@gmail.com">email</a></li>
+					<li><a href="https://github.com/jessicadever1">github.com/jessicadever1</a></li>
+				</ul>
+			</footer>
+		</body>
+	</html>
