--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							</section>
 							<div class="holidayRoadSection">
 								<div class="videoPosition">	
-									<video class="video" src="https://www.youtube.com/watch?v=5kBMo1OtAyE" controls ></video>
+									
 									<div class="projectDescription">
 										<h3>Holiday Road</h3>
 										<p>This project was a collaborative effort of myself and four classmates. We worked together using peer and group programing to plan, build and implement features for a planning app. Features included sorting features to plan a trip location, food options monuments and weather of the day that used an external API. My contributions were the weather feature, and all group efforts.</p>
@@ -128,68 +128,42 @@
 					<article class="soloProjects" id="soloProjects">
 						<h2>Solo Projects</h2>
 						<section class="findAFarmerSection">
-							<h3>Find A Farmer</h3>
-							<p>This project was a solo project. A CRUD web application, built with React, that allows environmentally minded individuals, who would like to prevent food waste from going to landfills to connect with local pig farmers, who have agreed to welcome visitors to feed food scraps to their pigs. The result being a decrease of food waste entering landfills, and a budget friendly alternative for farmers to be able to provide their pigs with a nutritious diet. </p>
+							<div class="videoPosition">
+								<iframe src="https://www.youtube.com/embed/5kBMo1OtAyE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<div class="projectDescription">
+									<h3>Find A Farmer</h3>
+									<p>This project was a solo project. A CRUD web application, built with React, that allows environmentally minded individuals, who would like to prevent food waste from going to landfills to connect with local pig farmers, who have agreed to welcome visitors to feed food scraps to their pigs. The result being a decrease of food waste entering landfills, and a budget friendly alternative for farmers to be able to provide their pigs with a nutritious diet. </p>
+								</div>
+							</div>
 							<h4>Technology Used: </h4>
 							<div class="techUsed">
-								<div class="langUsed">
-									<div>Programing Language</div>
 									<img src="./images/React.png" class="logo" alt="React Logo">
-								</div>
-								<div class="stylingToolsUsed">
-									<div class="logoTitle">Styling</div>
-									<div>
-										<img src="./images/CSS.png" class="logo" alt="CSS Logo">
-										<img src="./images/Canva.png" class="logo" alt="Canva Logo">
-										<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
-									</div>
-								</div>
-								<div class="editorUsed">
-									<div>Editing Tool</div>
+									<img src="./images/CSS.png" class="logo" alt="CSS Logo">
+									<img src="./images/Canva.png" class="logo" alt="Canva Logo">
+									<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
 									<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
-								</div>
-								<div class="ERDUsed">
-									<div>ERD</div>
 									<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
-								</div>
-								<div class="wireFrameUsed">
-									<div>Wirefarme Tool</div>
 									<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
-								</div>
 							</div>
 						</section>
 					</article>
 					<section class="techBlock" id="techBlock">
-						<h2>Technology</h2>
+						<h2 class="techHeading">Technology</h2>
 							<div class="techBlockLogos">
-								<div class="langUsedTechBlock">
-									<div>Programing Language</div>
 									<img src="./images/React.png" class="logoTechBlock" alt="React Logo">
 									<img src="./images/JavaScript.png" class="logoTechBlock" alt="JavaScript Logo">
 									<img src="./images/HTML.png" class="logoTechBlock" alt="HTML Logo">
-								</div>
-								<div class="stylingToolsUsedTechBlock">
-									<div>Styling</div>
 									<img src="./images/CSS.png" class="logoTechBlock" alt="CSS Logo">
 									<img src="./images/Canva.png" class="logoTechBlock" alt="Canva Logo">
 									<img src="./images/Coolors.png" class="logoTechBlock" alt="Coolors Logo">
-								</div>
-								<div class="editorUsed">
-									<div>Editing Tool</div>
 									<img src="./images/VS Code.png" class="logoTechBlock" alt="VS Code Logo">
-								</div>
-								<div class="ERDUsed">
-									<div>ERD</div>
 									<img src="./images/dbDiagram.png" class="logoTechBlock" alt="dbDiagram Logo">
-								</div>
-								<div class="wireFrameUsed">
-									<div>Wirefarme Tool</div>
 									<img src="./images/Figma.png" class="logoTechBlock" alt="dbDiagram Logo">
-								</div>
 							</div>	
 					</section>
 				
 					<section class="educationBlock" id="educationBlock">
+						<h2 class="edHeading">Education</h2>
 						<article class="NSSEd">
 							<img src="./images/NSS.png" class="logoEdBlock" alt="NSS Logo">
 							<div class="NSSInfo">
