--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="keywords" content="">
-		<meta name="description" content="">
-		<title>Composite Template</title>
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/templatemo_style.css">
-		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>		
-        <!-- 
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="keywords" content="">
+	<meta name="description" content="">
+	<title>Composite Template</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/templatemo_style.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
+	<!-- 
         Composite Template 
         http://www.templatemo.com/preview/templatemo_444_composite
         -->
-	</head>
-	<body id="top" data-spy="scroll" data-target=".navbar-collapse">
+</head>
+
+<body id="top" data-spy="scroll" data-target=".navbar-collapse">
 
 	<!-- start templatemo navigation -->
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -43,23 +45,24 @@
 	</nav>
 	<!-- end templatemo navigation -->
 	<section id="home" class="text-center">
-	<div class="templatemo_headerimage">
-		<div class="flexslider">
-		<ul class="slides">
-			<li>
-				<img src="images/slider/1.jpg" alt="Slide 1">
-				<div class="slider-caption">
-					<div class="templatemo_homewrapper">
-					<h1>Hi, I'm Jess!</h1>
-					<h2 class="subtitle typewrite" data-period="2000" data-type='[ "Software Engineer", "Hiker", "Pineapple on Pizza", "Coding Love Language: CSS", "Travel Enthusiast", "Creamy Peanutbutter", "Environmentalist" ]'>
-						<span class="wrap"></span>
-						Test
-					</h2>
-						<a href="#portfolio" class="smoothScroll templatemo-slider-btn btn btn-default">Learn More</a>
-					</div>
-				</div>
-			</li>
-			<!-- <li>
+		<div class="templatemo_headerimage">
+			<div class="flexslider">
+				<ul class="slides">
+					<li>
+						<img src="images/slider/1.jpg" alt="Slide 1">
+						<div class="slider-caption">
+							<div class="templatemo_homewrapper">
+								<h1>Hi, I'm Jess!</h1>
+								<h2 class="subtitle typewrite" data-period="2000"
+									data-type='[ "Software Engineer", "Hiker", "Pineapple on Pizza", "Coding Love Language: CSS", "Travel Enthusiast", "Creamy Peanutbutter", "Environmentalist" ]'>
+									<span class="wrap"></span>
+									Test
+								</h2>
+								<!-- <a href="#portfolio" class="smoothScroll templatemo-slider-btn btn btn-default">Learn More</a> -->
+							</div>
+						</div>
+					</li>
+					<!-- <li>
 				<img src="images/slider/2.jpg" alt="Slide 2">
 				<div class="slider-caption">
 					<div class="templatemo_homewrapper">
@@ -79,39 +82,43 @@
 					</div>
 				</div>
 			</li> -->
-		</ul>
+				</ul>
+			</div>
 		</div>
-	</div>				
-	</section>	
+	</section>
 	<!-- start templatemo features -->
 	<section id="features" class="features text-center">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
-					<h2>SOME FEATURES</h2>
-					<p>Composite is free responsive mobile template from <span class="blue">template</span><span class="green">mo</span>.com website. Feel free to use this layout for any website project. Please tell your friends about us. Thank you.</p>
+					<h2>TECHNOLOGY</h2>
+					<p> <span class="blue"></span><span class="green"></span></p>
 				</div>
 				<div class="col-md-12"></div>
 				<div class="col-sm-6 col-md-3">
-					<a href="#"><i class="fa fa-laptop"></i></a>
-						<h3>Responsive Design</h3>
-						<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut rutrum feugiat neque.</p>
+					<a href="#"><img src="./images/React.png" class="logoTechBlock fa" alt="React Logo"></a>
+					<h3>React</h3>
+					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
+						rutrum feugiat neque.</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<a href="#"><i class="fa fa-cog"></i></a>
-						<h3>Bootstrap 3</h3>
-						<p>Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+					<a href="#"><img src="./images/JavaScript.png" class="logoTechBlock fa" alt="JavaScript Logo"></a>
+					<h3>JavaScript</h3>
+					<p>Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Cum sociis natoque penatibus et magnis
+						dis parturient montes.</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><i class="fa fa-font"></i></a>
-						<h3>Google Web Fonts</h3>
-						<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+					<h3>Google Web Fonts</h3>
+					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
+						dis parturient montes.</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><i class="fa fa-user"></i></a>
-						<h3>User Friendly</h3>
-						<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut rutrum feugiat neque.</p>
+					<h3>User Friendly</h3>
+					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
+						rutrum feugiat neque.</p>
 				</div>
 			</div>
 		</div>
@@ -125,36 +132,46 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-8 text-center">
 					<h2>ABOUT US</h2>
-					<p>Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra gravida nulla. Duis sed enim vitae metus nonummy venenatis.</p>
+					<p>Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra gravida nulla. Duis
+						sed enim vitae metus nonummy venenatis.</p>
 				</div>
 				<div class="col-md-12"></div>
 				<div class="col-sm-6 col-md-6 info">
 					<h3>We are COMPOSITE</h3>
 					<h4>WEB DESIGN &AMP; DEVELOPMENT AGENCY</h4>
-					<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum dapibus lectus 	a ligula blandit ac egestas ipsum facilisis toque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum dapibus lectus 	a ligula blandit ac egestas ipsum facilisi.</p>
-					<p>Suspendisse potenti. Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra gravida nulla. Duis sed enim vitae metus nonummy venenatis. Curabitur semper rutrum sapien. Mauris luctus.</p>
+					<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum
+						dapibus lectus a ligula blandit ac egestas ipsum facilisis toque penatibus et magnis dis
+						parturient montes, nascetur ridiculus mus. Vestibulum dapibus lectus a ligula blandit ac egestas
+						ipsum facilisi.</p>
+					<p>Suspendisse potenti. Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra
+						gravida nulla. Duis sed enim vitae metus nonummy venenatis. Curabitur semper rutrum sapien.
+						Mauris luctus.</p>
 				</div>
 				<div class="col-sm-6 col-md-6 skills">
 					<span>HTML5</span>
-						<span class="pull-right">100%</span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-							</div>
+					<span class="pull-right">100%</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
+							aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+					</div>
 					<span>CSS3</span>
-						<span class="pull-right">100%</span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-							</div>
+					<span class="pull-right">100%</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
+							aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+					</div>
 					<span>PHOTOSHOP</span>
-						<span class="pull-right">80%</span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
-							</div>
+					<span class="pull-right">80%</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
+							aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+					</div>
 					<span>JQUERY</span>
-						<span class="pull-right">90%</span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
-							</div>
+					<span class="pull-right">90%</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
+							aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -168,28 +185,29 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
 					<h2>MEET THE TEAM</h2>
-					<p>Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra gravida nulla. Duis sed enim vitae metus nonummy venenatis. Curabitur semper rutrum sapien. Mauris luctus.</p>
+					<p>Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra gravida nulla. Duis
+						sed enim vitae metus nonummy venenatis. Curabitur semper rutrum sapien. Mauris luctus.</p>
 				</div>
 				<div class="col-md-12"></div>
 				<div class="col-sm-6 col-md-3">
 					<img src="images/member1.jpg" class="img-responsive" alt="team 1">
-						<h3>TRACY</h3>
-						<p>DESIGNER</p>
+					<h3>TRACY</h3>
+					<p>DESIGNER</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<img src="images/member2.jpg" class="img-responsive" alt="team 2">
-						<h3>MARY</h3>
-						<p>DEVELOPER</p>
+					<h3>MARY</h3>
+					<p>DEVELOPER</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<img src="images/member3.jpg" class="img-responsive" alt="team 3">
-						<h3>JULIA</h3>
-						<p>DIRECTOR</p>
+					<h3>JULIA</h3>
+					<p>DIRECTOR</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<img src="images/member4.jpg" class="img-responsive" alt="team 4">
-						<h3>LINDA</h3>
-						<p>MANAGER</p>
+					<h3>LINDA</h3>
+					<p>MANAGER</p>
 				</div>
 			</div>
 		</div>
@@ -203,71 +221,72 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
 					<h2>PORTFOLIO</h2>
-					<p>Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra gravida nulla. Duis sed enim vitae metus nonummy venenatis. Curabitur semper rutrum sapien.</p>
+					<p>Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra gravida nulla. Duis
+						sed enim vitae metus nonummy venenatis. Curabitur semper rutrum sapien.</p>
 				</div>
 				<div class="col-md-12"></div>
 				<div class="col-sm-6 col-md-3">
 					<div class="image_thumb">
 						<img src="images/p1.jpg" class="img-responsive" alt="work">
-							<div class="image_overlay">
-								<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
-							</div>
+						<div class="image_overlay">
+							<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
+						</div>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="image_thumb">
 						<img src="images/p2.jpg" class="img-responsive" alt="work">
-							<div class="image_overlay">
-								<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
-							</div>
+						<div class="image_overlay">
+							<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
+						</div>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="image_thumb">
 						<img src="images/p3.jpg" class="img-responsive" alt="work">
-							<div class="image_overlay">
-								<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
-							</div>
+						<div class="image_overlay">
+							<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
+						</div>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="image_thumb">
 						<img src="images/p4.jpg" class="img-responsive" alt="work">
-							<div class="image_overlay">
-									<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
-							</div>
+						<div class="image_overlay">
+							<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
+						</div>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="image_thumb">
 						<img src="images/p5.jpg" class="img-responsive" alt="work">
-							<div class="image_overlay">
-								<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
-							</div>
+						<div class="image_overlay">
+							<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
+						</div>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="image_thumb">
 						<img src="images/p6.jpg" class="img-responsive" alt="work">
-							<div class="image_overlay">
-								<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
-							</div>
+						<div class="image_overlay">
+							<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
+						</div>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="image_thumb">
 						<img src="images/p7.jpg" class="img-responsive" alt="work">
-							<div class="image_overlay">
-								<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
-							</div>
+						<div class="image_overlay">
+							<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
+						</div>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="image_thumb">
 						<img src="images/p8.jpg" class="img-responsive" alt="work">
-							<div class="image_overlay">
-								<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
-							</div>
+						<div class="image_overlay">
+							<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -282,12 +301,13 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-8 text-center">
 					<h2>CONTACT US</h2>
-					<p>Suspendisse potenti. Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra gravida nulla. Duis sed enim vitae metus nonummy venenatis. Curabitur semper rutrum sapien.</p>
+					<p>Suspendisse potenti. Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra
+						gravida nulla. Duis sed enim vitae metus nonummy venenatis. Curabitur semper rutrum sapien.</p>
 				</div>
 				<div class="col-md-12"></div>
 				<div class="col-sm-6 col-md-4 address">
 					<h3>OUR ADDRESS</h3>
-					<p><i class="fa fa-phone"></i>  090-080-0980</p>
+					<p><i class="fa fa-phone"></i> 090-080-0980</p>
 					<p><i class="fa fa-envelope-o"></i> <a href="#">info@company.com</a></p>
 					<p><i class="fa fa-globe"></i> <a href="#">http://www.company.com</a></p>
 					<p><i class="fa fa-map-marker"></i> 360 Aenean Quis Semper, Maecenas 10450</p>
@@ -335,7 +355,7 @@
 	<!-- start back to top -->
 	<a href="#top" class="go-top"><i class="fa fa-chevron-up fa-1x"></i></a>
 	<!-- end back to top -->
-	
+
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/smoothscroll.js"></script>
@@ -344,29 +364,30 @@
 
 	<!-- start templatemo back to top js -->
 	<script>
-		$(document).ready(function() {
+		$(document).ready(function () {
 			// FlexSlider 
-		  	$('.flexslider').flexslider({
-		      animation: "fade",
-		      directionNav: false
-		  	});
+			$('.flexslider').flexslider({
+				animation: "fade",
+				directionNav: false
+			});
 
 			// Show or hide the sticky footer button
-			$(window).scroll(function() {
+			$(window).scroll(function () {
 				if ($(this).scrollTop() > 200) {
 					$('.go-top').fadeIn(200);
 				} else {
 					$('.go-top').fadeOut(200);
 				}
-			});		
+			});
 			// Animate the scroll to top
-			$('.go-top').click(function(event) {
+			$('.go-top').click(function (event) {
 				event.preventDefault();
-				$('html, body').animate({scrollTop: 0}, 300);
+				$('html, body').animate({ scrollTop: 0 }, 300);
 			})
 		});
 	</script>
 	<!-- end templatemo back to top js -->
 
-	</body>
+</body>
+
 </html>
