trying to format profile pic

--- a/index.html
+++ b/index.html
@@ -47,11 +47,15 @@
 	<section id="home" class="text-center">
 		<div class="templatemo_headerimage">
 			<div class="flexslider">
+
 				<ul class="slides">
+
 					<li>
 						<img src="images/slider/1.jpg" alt="Slide 1">
 						<div class="slider-caption">
+							<img id="profilePicture" src="images/jessProfilePic.png" alt="profile picture">
 							<div class="templatemo_homewrapper">
+
 								<h1>Hi, I'm Jess!</h1>
 								<h2 class="subtitle typewrite" data-period="2000"
 									data-type='[ "Software Engineer", "Hiker", "Pineapple on Pizza", "Coding Love Language: CSS", "Travel Enthusiast", "Creamy Peanutbutter", "Environmentalist" ]'>
