update tech block

--- a/index.html
+++ b/index.html
@@ -113,14 +113,46 @@
 						dis parturient montes.</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<a href="#"><i class="fa fa-font"></i></a>
-					<h3>Google Web Fonts</h3>
+					<a href="#"><img src="./images/HTML.png" class="logoTechBlock fa" alt="HTML Logo"></a>
+					<h3>
+						<HTML:5></HTML:5>
+					</h3>
 					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
 						dis parturient montes.</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<a href="#"><i class="fa fa-user"></i></a>
-					<h3>User Friendly</h3>
+					<a href="#"><img src="./images/CSS.png" class="logoTechBlock fa" alt="CSS Logo"></a>
+					<h3>CSS3</h3>
+					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
+						rutrum feugiat neque.</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/Canva.png" class="logoTechBlock fa" alt="Canva Logo"></a>
+					<h3>Canva</h3>
+					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
+						rutrum feugiat neque.</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/Coolors.png" class="logoTechBlock fa" alt="Coolors Logo"></a>
+					<h3>Coolers</h3>
+					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
+						rutrum feugiat neque.</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/VS Code.png" class="logoTechBlock fa" alt="VS Code Logo"></a>
+					<h3>VS Code</h3>
+					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
+						rutrum feugiat neque.</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/dbDiagram.png" class="logoTechBlock fa" alt="dbDiagram Logo"></a>
+					<h3>dbDiagram</h3>
+					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
+						rutrum feugiat neque.</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/Figma.png" class="logoTechBlock fa" alt="dbDiagram Logo"></a>
+					<h3>Figma</h3>
 					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
 						rutrum feugiat neque.</p>
 				</div>
