--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#top" class="smoothScroll">HOME</a></li>
 					<li><a href="#about" class="smoothScroll">ABOUT</a></li>
-					<li><a href="#features" class="smoothScroll">PROJECTS</a></li>
-					<li><a href="#team" class="smoothScroll">TECHNOLOGY</a></li>
+					<li><a href="#technology" class="smoothScroll">TECHNOLOGY</a></li>
+					<li><a href="#team" class="smoothScroll">PROJECTS</a></li>
 					<li><a href="#portfolio" class="smoothScroll">PORTFOLIOS</a></li>
 					<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
 				</ul>
@@ -90,8 +90,70 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- start templatemo about -->
+	<section id="about">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-2"></div>
+				<div class="col-md-8 text-center">
+					<h2>ABOUT ME</h2>
+					<p>Launching a career in software development was something I never envisioned myself doing. But I
+						found myself facing the big life questions in 2020, like “what do you want to contribute to the
+						world?” At that time, a friend described what she enjoyed about her career as a software
+						developer. She phrased her work as “problem solving,” and that sounded incredibly appealing. I
+						did research on what it meant to be a software developer. I started with self-paced classes on
+						Team Tree House, then tried out NSS’s jumpstart class, before enrolling in their full-time boot
+						camp because I found that I enjoyed using logic in JavaScript, my creativity that CSS lends
+						itself to, and the teamwork building an app requires.</p>
+				</div>
+				<div class="col-md-12"></div>
+				<!-- <div class="col-sm-6 col-md-6 info">
+					<h3>We are COMPOSITE</h3>
+					<h4>WEB DESIGN &AMP; DEVELOPMENT AGENCY</h4>
+					<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum
+						dapibus lectus a ligula blandit ac egestas ipsum facilisis toque penatibus et magnis dis
+						parturient montes, nascetur ridiculus mus. Vestibulum dapibus lectus a ligula blandit ac egestas
+						ipsum facilisi.</p>
+					<p>Suspendisse potenti. Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra
+						gravida nulla. Duis sed enim vitae metus nonummy venenatis. Curabitur semper rutrum sapien.
+						Mauris luctus.</p>
+				</div> -->
+				<!-- <div class="col-sm-6 col-md-6 skills">
+					<span>HTML5</span>
+					<span class="pull-right">50%</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
+							aria-valuemin="0" aria-valuemax="50" style="width: 100%;"></div>
+					</div>
+					<span>CSS3</span>
+					<span class="pull-right">100%</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
+							aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+					</div>
+					<span>PHOTOSHOP</span>
+					<span class="pull-right">80%</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
+							aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+					</div>
+					<span>JQUERY</span>
+					<span class="pull-right">90%</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
+							aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+					</div> -->
+			</div>
+		</div>
+		</div>
+	</section>
+	<!-- end templatemo about -->
+
+
 	<!-- start templatemo features -->
-	<section id="features" class="features text-center">
+	<section id="technology" name="technology" class="features text-center">
+		<a id="technology" name="technology"></a>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-2"></div>
@@ -161,58 +223,7 @@
 	</section>
 	<!-- end templatemo features -->
 
-	<!-- start templatemo about -->
-	<section id="about">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-2"></div>
-				<div class="col-md-8 text-center">
-					<h2>ABOUT US</h2>
-					<p>Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra gravida nulla. Duis
-						sed enim vitae metus nonummy venenatis.</p>
-				</div>
-				<div class="col-md-12"></div>
-				<div class="col-sm-6 col-md-6 info">
-					<h3>We are COMPOSITE</h3>
-					<h4>WEB DESIGN &AMP; DEVELOPMENT AGENCY</h4>
-					<p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum
-						dapibus lectus a ligula blandit ac egestas ipsum facilisis toque penatibus et magnis dis
-						parturient montes, nascetur ridiculus mus. Vestibulum dapibus lectus a ligula blandit ac egestas
-						ipsum facilisi.</p>
-					<p>Suspendisse potenti. Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra
-						gravida nulla. Duis sed enim vitae metus nonummy venenatis. Curabitur semper rutrum sapien.
-						Mauris luctus.</p>
-				</div>
-				<div class="col-sm-6 col-md-6 skills">
-					<span>HTML5</span>
-					<span class="pull-right">100%</span>
-					<div class="progress">
-						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
-							aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-					</div>
-					<span>CSS3</span>
-					<span class="pull-right">100%</span>
-					<div class="progress">
-						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
-							aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-					</div>
-					<span>PHOTOSHOP</span>
-					<span class="pull-right">80%</span>
-					<div class="progress">
-						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
-							aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
-					</div>
-					<span>JQUERY</span>
-					<span class="pull-right">90%</span>
-					<div class="progress">
-						<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80"
-							aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- end templatemo about -->
+
 
 	<!-- start templatemo team -->
 	<section id="team" class="text-center">
@@ -336,17 +347,17 @@
 			<div class="row">
 				<div class="col-md-2"></div>
 				<div class="col-md-8 text-center">
-					<h2>CONTACT US</h2>
+					<h2>GET IN TOUCH</h2>
 					<p>Suspendisse potenti. Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra
 						gravida nulla. Duis sed enim vitae metus nonummy venenatis. Curabitur semper rutrum sapien.</p>
 				</div>
 				<div class="col-md-12"></div>
 				<div class="col-sm-6 col-md-4 address">
-					<h3>OUR ADDRESS</h3>
-					<p><i class="fa fa-phone"></i> 090-080-0980</p>
-					<p><i class="fa fa-envelope-o"></i> <a href="#">info@company.com</a></p>
-					<p><i class="fa fa-globe"></i> <a href="#">http://www.company.com</a></p>
-					<p><i class="fa fa-map-marker"></i> 360 Aenean Quis Semper, Maecenas 10450</p>
+					<h3>CONTACT INFO</h3>
+					<p><i class="fa fa-phone"></i> (518) 538-8343</p>
+					<p><i class="fa fa-envelope-o"></i> <a href="#">jessicadever1@gmail.com</a></p>
+					<p><i class="fa fa-globe"></i> <a href="https://github.com/jessicadever1">GitHub</a></p>
+					<p><i class="fa fa-map-marker"></i> Nashville, TN</p>
 				</div>
 				<div class="col-sm-6 col-md-8">
 					<form action="#" method="post" role="form">
@@ -379,10 +390,10 @@
 				<div class="social_icon">
 					<a href="#" class="fa fa-facebook"></a>
 					<a href="#" class="fa fa-twitter"></a>
-					<a href="#" class="fa fa-linkedin"></a>
+					<a href="https://www.linkedin.com/in/jessicadever1/" class="fa fa-linkedin"></a>
 					<a href="#" class="fa fa-tumblr"></a>
 				</div>
-				<p>Copyright © 2084 Your Company Name</p>
+				<p>Copyright © 2021 Jess Dever</p>
 			</div>
 		</div>
 	</footer>
