--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#top" class="smoothScroll">HOME</a></li>
 					<li><a href="#about" class="smoothScroll">ABOUT</a></li>
-					<li><a href="#technology" class="smoothScroll">TECHNOLOGY</a></li>
+					<li><a href="#technology" for="technology" class="smoothScroll">TECHNOLOGY</a></li>
 					<li><a href="#team" class="smoothScroll">PROJECTS</a></li>
 					<li><a href="#portfolio" class="smoothScroll">PORTFOLIOS</a></li>
 					<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
@@ -332,7 +332,7 @@
 					<div class="image_thumb">
 						<img src="images/p8.jpg" class="img-responsive" alt="work">
 						<div class="image_overlay">
-							<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
+							<a href="#"><i class="fa fa-map-marker"></i></a>
 						</div>
 					</div>
 				</div>
@@ -389,7 +389,7 @@
 			<div class="row">
 				<div class="social_icon">
 					<a href="#" class="fa fa-facebook"></a>
-					<a href="#" class="fa fa-twitter"></a>
+					<a href="#" class="fa fa-arrow"></a>
 					<a href="https://www.linkedin.com/in/jessicadever1/" class="fa fa-linkedin"></a>
 					<a href="#" class="fa fa-tumblr"></a>
 				</div>
