must still add ed

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	</section>
 
 	<!-- start templatemo about -->
-	<section id="about">
+	<section id="about" data-target=".navbar-collapse">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-2"></div>
@@ -226,119 +226,6 @@
 
 
 
-	<!-- start templatemo team -->
-	<section id="projects" name="projects" name="projects" class="projects smoothScroll" class="text-center">
-		<div class="container">
-			<div class="column">
-				<div class="col-md-2"></div>
-				<div class="col-md-8 projectTitleDiv">
-					<h2 class="projectsTitle">PROJECTS</h2>
-					<p class="space"></p>
-				</div>
-
-				<section class="flexSection" name="">
-					<div class="flexClass" id="NS">
-						<img src="images/Nutshell.png" class="img-responsive projectImg" alt="team 1">
-						<section class="nutshellSection ps">
-							<h3>Nutshell</h3>
-							<p>GROUP PROJECT</p>
-							<p>This project was a collaborative effort of myself and three classmates. We worked
-								together using individual and group programing to plan, build and implement features for
-								a planning app. Features included forms to schedule events, task lists, favorited news
-								articles, weather of the day that used an external API. My contributions were the
-								weather feature, and the events feature.</p>
-							<h4>Technology Used: </h4>
-							<div class="techUsed">
-
-								<img src="./images/JavaScript.png" class="logo" alt="JavaScript Logo">
-								<img src="./images/HTML.png" class="logo" alt="HTML Logo">
-								<img src="./images/CSS.png" class="logo" alt="CSS Logo">
-								<img src="./images/Canva.png" class="logo" alt="Canva Logo">
-								<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
-								<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
-								<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
-								<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
-
-							</div>
-						</section>
-					</div>
-					<div class="flexClass" id="HR">
-
-						<section class="postS">
-							<div class="holidayRoadSection">
-								<div class="">
-									<div class="projectDescription">
-										<h3>Holiday Road</h3>
-										<p>GROUP PROJECT</p>
-										<p>This project was a collaborative effort of myself and four classmates. We
-											worked together using peer and group programing to plan, build and implement
-											features for a planning app. Features included sorting features to plan a
-											trip location, food options monuments and weather of the day that used an
-											external API. My contributions were the weather feature, and all group
-											efforts.</p>
-									</div>
-								</div>
-								<h4>Technology Used: </h4>
-								<div class="techUsed">
-									<img src="./images/JavaScript.png" class="logo" alt="JavaScript Logo">
-									<img src="./images/HTML.png" class="logo" alt="HTML Logo">
-									<img src="./images/CSS.png" class="logo" alt="CSS Logo">
-									<img src="./images/Canva.png" class="logo" alt="Canva Logo">
-									<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
-									<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
-									<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
-									<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
-								</div>
-						</section>
-						<img src="images/HolidayRoad.png" class="img-responsive HRImg" alt="team 2">
-
-					</div>
-					<div class="flexClass" id="FAF">
-						<iframe class="projectImg" src="https://www.youtube.com/embed/5kBMo1OtAyE"
-							title="YouTube video player" frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe>
-						<!-- <h2>Solo Projects</h2> -->
-						<section class="findAFarmerSection ps">
-							<div class="videoPosition">
-
-								<div class="projectDescription fAF">
-									<h3>Find A Farmer</h3>
-									<p>SOLO PROJECT</p>
-									<p>This project was a solo project. A CRUD web application, built with React, that
-										allows environmentally minded individuals, who would like to prevent food waste
-										from
-										going to landfills to connect with local pig farmers, who have agreed to welcome
-										visitors to feed food scraps to their pigs. The result being a decrease of food
-										waste entering landfills, and a budget friendly alternative for farmers to be
-										able
-										to provide their pigs with a nutritious diet. </p>
-									<h4>Technology Used: </h4>
-									<div class="techUsed">
-										<img src="./images/React.png" class="logo" alt="React Logo">
-										<img src="./images/CSS.png" class="logo" alt="CSS Logo">
-										<img src="./images/Canva.png" class="logo" alt="Canva Logo">
-										<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
-										<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
-										<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
-										<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
-									</div>
-								</div>
-							</div>
-						</section>
-					</div>
-				</section>
-
-				<!-- <div class="col-sm-6 col-md-3 flexClass">
-							<img src="images/member4.jpg" class="img-responsive" alt="team 4">
-							<h3>LINDA</h3>
-							<p>MANAGER</p>
-						</div> -->
-			</div>
-		</div>
-		</div>
-	</section>
-	<!-- end templatemo team -->
 
 	<!-- start templatemo portfolio -->
 	<section id="portfolio">
@@ -419,6 +306,123 @@
 		</div>
 	</section>
 	<!-- end templatemo portfolio -->
+
+
+	<!-- start templatemo projects -->
+	<section id="projects" name="projects" class="projects smoothScroll">
+		<div class="container">
+			<div class="column">
+				<div class="col-md-2"></div>
+				<div class="col-md-8 projectTitleDiv">
+					<h2 class="projectsTitle">PROJECTS</h2>
+					<p class="space"></p>
+				</div>
+
+				<section class="flexSection" name="">
+					<div class="flexClass" id="NS">
+						<img src="images/Nutshell.png" class="img-responsive projectImg" alt="team 1">
+						<section class="nutshellSection ps">
+							<h3>Nutshell</h3>
+							<p>GROUP PROJECT</p>
+							<p>This project was a collaborative effort of myself and three classmates. We worked
+								together using individual and group programing to plan, build and implement features for
+								a planning app. Features included forms to schedule events, task lists, favorited news
+								articles, weather of the day that used an external API. My contributions were the
+								weather feature, and the events feature.</p>
+							<!-- <h4>Technology Used: </h4> -->
+							<div class="techUsed">
+
+								<img src="./images/JavaScript.png" class="logo" alt="JavaScript Logo">
+								<img src="./images/HTML.png" class="logo" alt="HTML Logo">
+								<img src="./images/CSS.png" class="logo" alt="CSS Logo">
+								<img src="./images/Canva.png" class="logo" alt="Canva Logo">
+								<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
+								<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
+								<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
+								<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
+
+							</div>
+						</section>
+					</div>
+					<div class="flexClass" id="HR">
+
+						<section class="postS">
+							<div class="holidayRoadSection">
+								<div class="">
+									<div class="projectDescription">
+										<h3>Holiday Road</h3>
+										<p>GROUP PROJECT</p>
+										<p>This project was a collaborative effort of myself and four classmates. We
+											worked together using peer and group programing to plan, build and implement
+											features for a planning app. Features included sorting features to plan a
+											trip location, food options monuments and weather of the day that used an
+											external API. My contributions were the weather feature, and all group
+											efforts.</p>
+									</div>
+								</div>
+								<!-- <h4>Technology Used: </h4> -->
+								<div class="techUsed">
+									<img src="./images/JavaScript.png" class="logo" alt="JavaScript Logo">
+									<img src="./images/HTML.png" class="logo" alt="HTML Logo">
+									<img src="./images/CSS.png" class="logo" alt="CSS Logo">
+									<img src="./images/Canva.png" class="logo" alt="Canva Logo">
+									<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
+									<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
+									<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
+									<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
+								</div>
+						</section>
+						<img src="images/HolidayRoad.png" class="img-responsive HRImg" alt="team 2">
+
+					</div>
+					<div class="flexClass" id="FAF">
+						<iframe class="projectImg" src="https://www.youtube.com/embed/5kBMo1OtAyE"
+							title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe>
+						<!-- <h2>Solo Projects</h2> -->
+						<section class="findAFarmerSection ps">
+							<div class="videoPosition">
+
+								<div class="projectDescription fAF">
+									<h3>Find A Farmer</h3>
+									<p>SOLO PROJECT</p>
+									<p>This project was a solo project. A CRUD web application, built with React, that
+										allows environmentally minded individuals, who would like to prevent food waste
+										from
+										going to landfills to connect with local pig farmers, who have agreed to welcome
+										visitors to feed food scraps to their pigs. The result being a decrease of food
+										waste entering landfills, and a budget friendly alternative for farmers to be
+										able
+										to provide their pigs with a nutritious diet. </p>
+									<!-- <h4>Technology Used: </h4> -->
+									<div class="techUsed">
+										<img src="./images/React.png" class="logo" alt="React Logo">
+										<img src="./images/CSS.png" class="logo" alt="CSS Logo">
+										<img src="./images/Canva.png" class="logo" alt="Canva Logo">
+										<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
+										<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
+										<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
+										<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
+									</div>
+								</div>
+							</div>
+						</section>
+					</div>
+				</section>
+
+				<!-- <div class="col-sm-6 col-md-3 flexClass">
+							<img src="images/member4.jpg" class="img-responsive" alt="team 4">
+							<h3>LINDA</h3>
+							<p>MANAGER</p>
+						</div> -->
+			</div>
+		</div>
+		</div>
+	</section>
+	<!-- end templatemo team -->
+
+
 
 	<!-- start templatemo contact -->
 	<section id="contact">
