--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#top" class="smoothScroll">HOME</a></li>
-					<li><a href="#about" class="smoothScroll">ABOUT</a></li>
-					<li><a href="#technology" class="smoothScroll">TECHNOLOGY</a></li>
-					<li><a href="#portfolio" class="smoothScroll">PORTFOLIOS</a></li>
-					<li><a href="#projects" id="projects" name="projects" name="projects"
-							class="projects smoothScroll">PROJECTS</a></li>
-					<li><a href="#contact" class="smoothScroll">CONTACT</a></li>
+					<li><a href="#top">HOME</a></li>
+					<li><a href="#aboutSection">ABOUT</a></li>
+					<li><a href="#technology">TECHNOLOGY</a></li>
+					<li><a href="#portfolio">PORTFOLIOS</a></li>
+					<li><a href="#projects" id="projects" name="projects" name="projects" class="projects">PROJECTS</a>
+					</li>
+					<li><a href="#contact" class="">CONTACT</a></li>
 				</ul>
 			</div>
 		</div>
@@ -93,7 +93,7 @@
 	</section>
 
 	<!-- start templatemo about -->
-	<section id="about" data-target=".navbar-collapse">
+	<section id="aboutSection" data-target=".navbar-collapse">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-2"></div>
