--- a/index.html
+++ b/index.html
@@ -474,10 +474,7 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-8 text-center">
 					<h2>GET IN TOUCH</h2>
-					<p>Suspendisse potenti. Etiam elementum laoreet mauris. Ut rutrum feugiat neque.
-						Suspendisse viverra
-						gravida nulla. Duis sed enim vitae metus nonummy venenatis. Curabitur semper
-						rutrum sapien.</p>
+					<p>I'm excited to meet you! Please reach out by phone or by email, so we can connect.</p>
 				</div>
 				<div class="col-md-12"></div>
 				<div class="col-sm-6 col-md-4 address">
