--- a/index.html
+++ b/index.html
@@ -298,8 +298,11 @@
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/Figma.png" class="logoTechBlock fa" alt="dbDiagram Logo"></a>
 					<h3>Figma</h3>
-					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
-						rutrum feugiat neque.</p>
+					<p>Plan. Plan. And then plan some more. This was the advice given to my cohort
+						by those students who had gone before us, and it proved to be great advice.
+						Figma was an awesome resource for mapping out wireframes and event listener flow
+						charts, throughout my time at NSS.
+					</p>
 				</div>
 			</div>
 		</div>
