--- a/index.html
+++ b/index.html
@@ -292,8 +292,9 @@
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/dbDiagram.png" class="logoTechBlock fa" alt="dbDiagram Logo"></a>
 					<h3>dbDiagram</h3>
-					<p>Cum sociis natoque penatibus et magnis dis parturient montes. Etiam elementum laoreet mauris. Ut
-						rutrum feugiat neque.</p>
+					<p>To help understand data flow, we used dbDiagram to build our Entity Relationship
+						Diagrams, starting with the class project: Glassdale.
+					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/Figma.png" class="logoTechBlock fa" alt="dbDiagram Logo"></a>
