--- a/index.html
+++ b/index.html
@@ -162,8 +162,10 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
 					<h2>PORTFOLIO</h2>
-					<p>Etiam elementum laoreet mauris. Ut rutrum feugiat neque. Suspendisse viverra gravida nulla. Duis
-						sed enim vitae metus nonummy venenatis. Curabitur semper rutrum sapien.</p>
+					<p>The following are a sample of the applications that I have created either as part of my
+						classwork,
+						as part of a group or a solo project. Click on each picture for details on the project.
+					</p>
 				</div>
 				<div class="col-md-12"></div>
 				<div class="col-sm-6 col-md-3">
