--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="image_thumb">
-						<img src="images/p6.jpg" class="img-responsive" alt="work">
+						<img src="images/recipeThumbnail.png" class="img-responsive" alt="work">
 						<div class="image_overlay">
-							<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
+							<a href="#recipe"><i class="fa fa-thumbs-o-up"></i></a>
 						</div>
 					</div>
 				</div>
@@ -191,7 +191,7 @@
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="image_thumb">
-						<img src="images/p8.jpg" class="img-responsive" alt="work">
+						<img src="images/vibes.png" class="img-responsive" alt="work">
 						<div class="image_overlay">
 							<a href="#"><i class="fa fa-map-marker"></i></a>
 						</div>
@@ -303,6 +303,27 @@
 							<p>Daily Journal was an on-going class project that was an exercise in learning HTML and CSS. It evolved
 								to include a local JSON database and JavaScript. I maintained it throughout the front-end portion of
 								the class to keep track of learning progress.
+							</p>
+							<!-- <h4>Technology Used: </h4> -->
+							<div class="techUsed">
+
+								<img src="./images/JavaScript.png" class="logo" alt="JavaScript Logo">
+								<img src="./images/HTML.png" class="logo" alt="HTML Logo">
+								<img src="./images/CSS.png" class="logo" alt="CSS Logo">
+								<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
+
+							</div>
+						</section>
+					</div>
+
+					<div class="flexClass" id="recipe">
+						<img src="images/recipes.png" class="img-responsive projectImg" alt="team 1">
+						<section class="dailyJournal ps">
+							<h3>Recipe Cards</h3>
+							<p>PRACTICE PROJECT</p>
+							<p>This project was purely for practice and fun exploring CSS, over the holiday break. It features
+								a form to input new recipes, a list of recipes for every meal of the day and some background on
+								the types of recipes I've had success with. 
 							</p>
 							<!-- <h4>Technology Used: </h4> -->
 							<div class="techUsed">
