--- a/index.html
+++ b/index.html
@@ -458,6 +458,32 @@
 						</section>
 					</div>
 
+					<div class="flexClass" id="Tabloid">
+						<img alt="Tabloid Pic" src="">
+						<section class="tabloidSection ps">
+							<div class="videoPosition">
+
+								<div class="projectDescription fAF">
+									<h3>Tabloid</h3>
+									<p>GROUP PROJECT</p>
+									<p>This was a group project that was an awesome collaborative effort of me and three
+										great classmates. We worked together to complete the issue tickets primarily via
+										pair and individual programing. Built in C#, Tabloid is a full CRUD, multi-user,
+										ASP.NET Core MVC web application featuring blog posts, that comments and tags
+										can
+										be added to. </p>
+									<!-- <h4>Technology Used: </h4> -->
+									<div class="techUsed">
+
+										<img src="./images/CSS.png" class="logo" alt="CSS Logo">
+										<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
+
+									</div>
+								</div>
+							</div>
+						</section>
+					</div>
+
 				</section>
 
 				<!-- <div class="col-sm-6 col-md-3 flexClass">
