git and github imgs

--- a/index.html
+++ b/index.html
@@ -474,7 +474,8 @@
 										be added to. </p>
 									<!-- <h4>Technology Used: </h4> -->
 									<div class="techUsed">
-
+										<img src="images/Git.png" class="logo" alt="git logo">
+										<img src="images/GitHub.png" class="logo" alt="github logo">
 										<img src="./images/CSS.png" class="logo" alt="CSS Logo">
 										<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
 
