so many updates

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 					<div class="image_thumb">
 						<img src="images/Glassdale Thumbnail.png" class="img-responsive" alt="work">
 						<div class="image_overlay">
-							<a href="#glassdale"><i class="fa fa-thumbs-o-up"></i></a>
+							<a href="#glassdale"><i class="fa fa-map-marker"></i></a>
 						</div>
 					</div>
 				</div>
@@ -179,15 +179,15 @@
 					<div class="image_thumb">
 						<img src="images/recipeThumbnail.png" class="img-responsive" alt="work">
 						<div class="image_overlay">
-							<a href="#recipe"><i class="fa fa-thumbs-o-up"></i></a>
+							<a href="#recipe"><i class="fa fa-map-marker"></i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="image_thumb">
-						<img src="images/p7.jpg" class="img-responsive" alt="work">
+						<img src="images/TabloidThumbnail.png" class="img-responsive" alt="work">
 						<div class="image_overlay">
-							<a href="#"><i class="fa fa-thumbs-o-up"></i></a>
+							<a href="#Tabloid"><i class="fa fa-map-marker"></i></a>
 						</div>
 					</div>
 				</div>
@@ -268,10 +268,52 @@
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/Figma.png" class="logoTechBlock fa" alt="dbDiagram Logo"></a>
 					<h3>Figma</h3>
-					<p>Plan. Plan. And then plan some more. This was the advice given to my cohort
-						by those students who had gone before us, and it proved to be great advice.
+					<p>Plan. Plan. And then plan some more.
 						Figma was an awesome resource for mapping out wireframes and event listener flow
 						charts, throughout my time at NSS.
+					</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/Cloudinary.png" class="logoTechBlock fa" alt="Cloudinary Logo"></a>
+					<h3>Cloudinary</h3>
+					<p>Being able to add images to my capstone project was a great feature!
+						Cloudinary uploaded and stored photos that users chose for their
+						profile picture.
+					</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/Git.png" class="logoTechBlock fa" alt="Git Logo"></a>
+					<h3>Git</h3>
+					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
+						dis parturient montes.
+					</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/GitHub.png" class="logoTechBlock fa" alt="GitHub Logo"></a>
+					<h3>GitHub</h3>
+					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
+						dis parturient montes.
+					</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/C.png" class="logoTechBlock fa" alt="C# Logo"></a>
+					<h3>C#</h3>
+					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
+						dis parturient montes.
+					</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/net.png" class="logoTechBlock fa" alt=".Net Logo"></a>
+					<h3>.NET</h3>
+					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
+						dis parturient montes.
+					</p>
+				</div>
+				<div class="col-sm-6 col-md-3">
+					<a href="#"><img src="./images/aspnetMVC.png" class="logoTechBlock fa" alt="ASP.NET MVC Logo"></a>
+					<h3>ASP.NET MVC</h3>
+					<p>Ut rutrum feugiat neque. Etiam elementum laoreet mauris. Cum sociis natoque penatibus et magnis
+						dis parturient montes.
 					</p>
 				</div>
 			</div>
@@ -301,7 +343,12 @@
 						<img src="images/DailyJournal.png" class="img-responsive projectImg" alt="team 1">
 						<section class="dailyJournal ps">
 							<h3>Daily Journal</h3>
-							<p>CLASS PROJECT</p>
+							<div class="projectInfo">
+								<p>CLASS PROJECT | </p>
+								<a href="https://github.com/jessicadever1/daily-journal" class="paddingLeft"> View
+									Code</a>
+							</div>
+
 							<p>Daily Journal was an on-going class project that was an exercise in learning HTML and
 								CSS. It evolved
 								to include a local JSON database and JavaScript. I maintained it throughout the
@@ -315,16 +362,22 @@
 								<img src="./images/HTML.png" class="logo" alt="HTML Logo">
 								<img src="./images/CSS.png" class="logo" alt="CSS Logo">
 								<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
+								<img src="images/Git.png" class="logo" alt="git logo">
+								<img src="images/GitHub.png" class="logo" alt="github logo">
 
 							</div>
 						</section>
 					</div>
 
 					<div class="flexClass" id="recipe">
-						<img src="images/recipes.png" class="img-responsive projectImg" alt="team 1">
-						<section class="dailyJournal ps">
+
+						<section class="dailyJournal postS">
 							<h3>Recipe Cards</h3>
-							<p>PRACTICE PROJECT</p>
+							<div class="projectInfo">
+								<p>PRACTICE PROJECT | </p>
+								<a href="https://github.com/jessicadever1/recipeCards" class="paddingLeft"> View
+									Code</a>
+							</div>
 							<p>This project was purely for practice and fun exploring CSS, over the holiday break. It
 								features
 								a form to input new recipes, a list of recipes for every meal of the day and some
@@ -338,18 +391,28 @@
 								<img src="./images/HTML.png" class="logo" alt="HTML Logo">
 								<img src="./images/CSS.png" class="logo" alt="CSS Logo">
 								<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
+								<img src="images/Git.png" class="logo" alt="git logo">
+								<img src="images/GitHub.png" class="logo" alt="github logo">
 
 							</div>
 						</section>
+						<img src="images/recipes.png" class="img-responsive HRImg" alt="team 1">
 					</div>
 
 					<div class="flexClass" id="HR">
-						<section class="postS">
+						<img src="images/HolidayRoad.png" class="img-responsive projectImg" alt="team 2">
+						<section class="ps">
 							<div class="holidayRoadSection">
 								<div class="">
 									<div class="projectDescription">
 										<h3>Holiday Road</h3>
-										<p>GROUP PROJECT</p>
+										<div class="projectInfo">
+											<p>GROUP PROJECT | </p>
+											<a href="https://github.com/jessicadever1/holiday-road-chilly-receptions"
+												class="paddingLeft">
+												View
+												Code</a>
+										</div>
 										<p>This project was a collaborative effort of myself and four classmates. We
 											worked together using peer and group programing to plan, build and implement
 											features for a planning app. Features included sorting features to plan a
@@ -368,16 +431,23 @@
 									<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
 									<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
 									<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
+									<img src="images/Git.png" class="logo" alt="git logo">
+									<img src="images/GitHub.png" class="logo" alt="github logo">
 								</div>
 						</section>
-						<img src="images/HolidayRoad.png" class="img-responsive HRImg" alt="team 2">
+
 					</div>
 
 					<div class="flexClass" id="glassdale">
-						<img src="images/glassdale.png" class="img-responsive projectImg" alt="team 1">
-						<section class="glassdale ps">
+
+						<section class="glassdale postS">
 							<h3>Glassdale</h3>
-							<p>CLASS PROJECT</p>
+							<div class="projectInfo">
+								<p>CLASS PROJECT | </p>
+								<a href="https://github.com/jessicadever1/glassdale" class="paddingLeft">
+									View
+									Code</a>
+							</div>
 							<p>This project was a learning project completed in class and led by our front-end
 								instructors.
 								This was an exercise in using event listeners, local API's, and more in depth practice
@@ -390,9 +460,12 @@
 								<img src="./images/HTML.png" class="logo" alt="HTML Logo">
 								<img src="./images/CSS.png" class="logo" alt="CSS Logo">
 								<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
+								<img src="images/Git.png" class="logo" alt="git logo">
+								<img src="images/GitHub.png" class="logo" alt="github logo">
 
 							</div>
 						</section>
+						<img src="images/glassdale.png" class="img-responsive HRImg" alt="team 1">
 					</div>
 
 
@@ -400,7 +473,13 @@
 						<img src="images/Nutshell.png" class="img-responsive projectImg" alt="team 1">
 						<section class="nutshellSection ps">
 							<h3>Nutshell</h3>
-							<p>GROUP PROJECT</p>
+							<div class="projectInfo">
+								<p>GROUP PROJECT | </p>
+								<a href="https://github.com/jessicadever1/nutyshell-leaving-the-lights-on-1"
+									class="paddingLeft">
+									View
+									Code</a>
+							</div>
 							<p>This project was a collaborative effort of myself and three classmates. We worked
 								together using individual and group programing to plan, build and implement features for
 								a planning app. Features included forms to schedule events, task lists, favorited news
@@ -417,6 +496,8 @@
 								<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
 								<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
 								<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
+								<img src="images/Git.png" class="logo" alt="git logo">
+								<img src="images/GitHub.png" class="logo" alt="github logo">
 
 							</div>
 						</section>
@@ -424,17 +505,19 @@
 
 
 					<div class="flexClass" id="FAF">
-						<iframe class="projectImg" src="https://www.youtube.com/embed/5kBMo1OtAyE"
-							title="YouTube video player" frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe>
+
 						<!-- <h2>Solo Projects</h2> -->
-						<section class="findAFarmerSection ps">
+						<section class="findAFarmerSection postS">
 							<div class="videoPosition">
 
 								<div class="projectDescription fAF">
 									<h3>Find A Farmer</h3>
-									<p>SOLO PROJECT</p>
+									<div class="projectInfo">
+										<p>SOLO PROJECT | </p>
+										<a href="https://github.com/jessicadever1/findAFarmer" class="paddingLeft">
+											View
+											Code</a>
+									</div>
 									<p>This project was a solo project. A CRUD web application, built with React, that
 										allows environmentally minded individuals, who would like to prevent food waste
 										from
@@ -446,26 +529,38 @@
 									<!-- <h4>Technology Used: </h4> -->
 									<div class="techUsed">
 										<img src="./images/React.png" class="logo" alt="React Logo">
+										<img src="./images/Cloudinary.png" class="logo" alt="Cloudinary">
 										<img src="./images/CSS.png" class="logo" alt="CSS Logo">
 										<img src="./images/Canva.png" class="logo" alt="Canva Logo">
 										<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
 										<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
 										<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
 										<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
+										<img src="images/Git.png" class="logo" alt="git logo">
+										<img src="images/GitHub.png" class="logo" alt="github logo">
 									</div>
 								</div>
 							</div>
 						</section>
+						<iframe class="projectImg HRImg" src="https://www.youtube.com/embed/5kBMo1OtAyE"
+							title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe>
 					</div>
 
 					<div class="flexClass" id="Tabloid">
-						<img alt="Tabloid Pic" src="">
+						<img alt="Tabloid Pic" src="./images/Tabloid.PNG" class="img-responsive projectImg">
 						<section class="tabloidSection ps">
 							<div class="videoPosition">
-
 								<div class="projectDescription fAF">
 									<h3>Tabloid</h3>
-									<p>GROUP PROJECT</p>
+									<div class="projectInfo">
+										<p>GROUP PROJECT | </p>
+										<a href="https://github.com/jessicadever1/tabloidmvc-missing-persons"
+											class="paddingLeft">
+											View
+											Code</a>
+									</div>
 									<p>This was a group project that was an awesome collaborative effort of me and three
 										great classmates. We worked together to complete the issue tickets primarily via
 										pair and individual programing. Built in C#, Tabloid is a full CRUD, multi-user,
@@ -478,7 +573,11 @@
 										<img src="images/GitHub.png" class="logo" alt="github logo">
 										<img src="./images/CSS.png" class="logo" alt="CSS Logo">
 										<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
-
+										<img src="./images/aspnetMVC.png" class="logo" alt="MVC logo">
+										<img src="./images/C.png" class="logo" alt="C# logo">
+										<img src="/images/NET.png" class="logo" alt=".Net Logo">
+										<img src="./images/SQL.png" class="logo" alt="SQL Logo">
+										<img src="./images/VS.png" class="logo" alt="VS Logo">
 									</div>
 								</div>
 							</div>
